# capture

./: .gitignore  Cargo.toml  NOTES.md  README.md  capture.py  dprint.json  flake.nix  justfile  pyproject.toml
capture/: __main__.py  convert.py  extract.py  llm.py  markdown-fmt.json  markdown.py  pdf2md.py  pipeline.py  resolvers.py
capture/prompts/: generate.md
capture/resolvers/: __init__.py  arxiv.py  base.py  default.py  github.py  lesswrong.py  pdf.py  reddit.py  wayback.py  wikipedia.py  youtube.py
capture/scripts/: single-file-archive
filters/: clean.lua
prompts/: cleanup.md  generate.md  merge.md  metadata.md  metadata_schema.json
src/: main.rs
tests/: corpus-golden.jsonl  test_corpus.py  test_extraction.py  test_live.py
