[project]
name = "capture"
version = "0.1.0"
description = "Capture websites as markdown"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0.3",
]

[project.scripts]
capture = "capture.__main__:main"

[tool.setuptools]
packages = ["capture"]
include-package-data = true

[tool.setuptools.package-data]
capture = ["prompts/*.md"]
