[project]
name = "capture"
version = "0.1.0"
description = "Save web pages and PDFs as self-contained archive folders with clean markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
capture = "capture.__main__:main"
pdf2md = "capture.pdf2md:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["capture"]

[dependency-groups]
dev = ["pytest"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["**/__pycache__", ".venv", "result", "data"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = ["live: end-to-end tests that hit the network and run a browser"]
